Update1 index.html

--- a/index.html
+++ b/index.html
@@ -356,35 +356,37 @@
         // --- 1. FULL DATABASE ---
         const appDatabase = [ 
             // --- GAMES (HIGH DEMAND) ---
-            { type: 'game', title: "Monopoly GO!", rating: "4.9", reviews: "2M+", image: "https://i.imgur.com/j8sqcfc.png", desc: "Unlimited Dice Rolls & Sticker Packs." },
+            { type: 'game', title: "Monopoly GO!", rating: "4.9", reviews: "29k+", image: "https://i.imgur.com/j8sqcfc.png", desc: "Unlimited Dice Rolls & Sticker Packs." },
+            { type: 'game', title: " Schedule I APK", rating: "4.8", reviews: "22k+", image: "https://i.imgur.com/QVfsyeX.jpeg", desc: "Unlimited Money & Coins Mod." },
+            { type: 'game', title: " Clash Royale", rating: "4.8", reviews: "21k+", image: "https://i.imgur.com/F4He5Le.jpeg", desc: "Private Server, Unlimited Resources." },
             { type: 'game', title: "Brawl Stars", rating: "4.8", reviews: "15k", image: "https://i.imgur.com/GJKhvLp.png", desc: "Null's Private Server (Unlimited Gems)." },
-            { type: 'game', title: "Free Fire MAX", rating: "4.7", reviews: "100M+", image: "https://i.imgur.com/LHZAo1O.jpeg", desc: "Auto-Headshot Menu & Aimbot." },
+            { type: 'game', title: "Free Fire MAX", rating: "4.7", reviews: "1M+", image: "https://i.imgur.com/LHZAo1O.jpeg", desc: "Auto-Headshot Menu & Aimbot." },
             { type: 'game', title: "Roblox", rating: "4.7", reviews: "25k", image: "https://i.imgur.com/SXAo9LE.png", desc: "Robux Generator & Mod Menu." },
-            { type: 'game', title: "Pokemon TCG Pocket", rating: "4.9", reviews: "500k", image: "https://i.imgur.com/vokUXt1.jpeg", desc: "God Pack Glitch & Unlimited Hourglasses." },
+            { type: 'game', title: "Pokemon TCG Pocket", rating: "4.9", reviews: "50k", image: "https://i.imgur.com/vokUXt1.jpeg", desc: "God Pack Glitch & Unlimited Hourglasses." },
             { type: 'game', title: "Car Parking Multiplayer", rating: "4.8", reviews: "5,200", image: "https://i.imgur.com/OsBjBd6.jpeg", desc: "Unlimited Money & Coins Mod." },
-            { type: 'game', title: "eFootball 2025", rating: "4.6", reviews: "8M+", image: "https://i.imgur.com/VV3jF8D.jpeg", desc: "Unlimited Coins & GP Patcher." },
+            { type: 'game', title: "eFootball 2025", rating: "4.6", reviews: "81k+", image: "https://i.imgur.com/VV3jF8D.jpeg", desc: "Unlimited Coins & GP Patcher." },
             { type: 'game', title: "Grand Theft Auto San Andreas", rating: "4.9", reviews: "8,500", image: "https://i.imgur.com/2IOrqlZ.jpeg", desc: "Cleo Menu & Graphics Mod." },
-            { type: 'game', title: "Subway Surfers", rating: "4.8", reviews: "300k", image: "https://i.imgur.com/ADOys1w.jpeg", desc: "Unlimited Keys & God Mode." },
+            { type: 'game', title: "Subway Surfers", rating: "4.8", reviews: "30k", image: "https://i.imgur.com/ADOys1w.jpeg", desc: "Unlimited Keys & God Mode." },
             { type: 'game', title: "Minecraft PE", rating: "4.9", reviews: "50k", image: "https://i.imgur.com/Slup8bg.jpeg", desc: "Full Version Unlocked (1.21)." },
             { type: 'game', title: "Pokemon GO", rating: "4.6", reviews: "12k", image: "https://i.imgur.com/HqwXWB6.jpeg", desc: "iSpoofer Joystick & Teleport (No Root)." },
             { type: 'game', title: "Toca Boca World", rating: "5.0", reviews: "12k", image: "https://i.imgur.com/NAxmbUn.jpeg", desc: "All maps and furniture unlocked." },
 
             // --- APPS (UTILITIES) ---
-            { type: 'app', title: "CapCut Pro", rating: "4.9", reviews: "5M+", image: "https://i.imgur.com/9671bj8.png", desc: "No Watermark & Premium Effects." },
-            { type: 'app', title: "GFX Tool Pro", rating: "4.7", reviews: "800k", image: "https://i.imgur.com/dniR6EN.png", desc: "Unlock 90FPS & HDR (No Lag)." },
+            { type: 'app', title: "CapCut Pro", rating: "4.9", reviews: "55k+", image: "https://i.imgur.com/9671bj8.png", desc: "No Watermark & Premium Effects." },
+            { type: 'app', title: "GFX Tool Pro", rating: "4.7", reviews: "81k", image: "https://i.imgur.com/dniR6EN.png", desc: "Unlock 90FPS & HDR (No Lag)." },
             { type: 'app', title: "Lulubox Pro", rating: "4.5", reviews: "1M+", image: "https://i.imgur.com/fi9wOhO.png", desc: "Unlock All Skins (Free Fire/Pubg)." },
             { type: 'app', title: "Discord Nitro", rating: "4.8", reviews: "50k", image: "https://i.imgur.com/lyurzfF.jpeg", desc: "3 Months Free Boost Generator." },
             { type: 'app', title: "Spotify Premium", rating: "4.9", reviews: "120k", image: "https://i.imgur.com/e714kzq.jpeg", desc: "Lifetime Premium (No Ads/Offline)." },
             { type: 'app', title: "ExpressVPN", rating: "4.9", reviews: "18k", image: "https://i.imgur.com/W1J2rwb.png", desc: "Premium Account Injection." },
 
             // --- GUIDES (HIGH CONVERSION) ---
-            { type: 'guide', title: "Monopoly GO: Dice Strategy", rating: "5.0", reviews: "95k", image: "https://i.imgur.com/yVtqDwQ.jpeg", desc: "Secret Loop to Never Run Out of Dice (PDF)." },
-            { type: 'guide', title: "Hollow Knight: Silksong ", rating: "5.0", reviews: "95k", image: "https://i.imgur.com/9Eae3SJ.jpeg", desc: "Pharloom's various caverns, tunnels, forests, and areas. (PDF)." },
+            { type: 'guide', title: "Monopoly GO: Dice Strategy", rating: "5.0", reviews: "15k", image: "https://i.imgur.com/yVtqDwQ.jpeg", desc: "Secret Loop to Never Run Out of Dice (PDF)." },
+            { type: 'guide', title: "Hollow Knight: Silksong ", rating: "5.0", reviews: "25k", image: "https://i.imgur.com/9Eae3SJ.jpeg", desc: "Pharloom's various caverns, tunnels, forests, and areas. (PDF)." },
             { type: 'guide', title: "COD Mobile: Aim Assist Config", rating: "4.9", reviews: "30k", image: "https://i.imgur.com/6NTergm.jpeg", desc: "Pro Sensitivity & No-Recoil Settings (PDF)." },
-            { type: 'guide', title: "GTA 6: Leaked Map & Secrets", rating: "4.8", reviews: "2M+", image: "https://i.imgur.com/50TipMQ.png", desc: "Exclusive Leak of Vice City Map & Cars." },
+            { type: 'guide', title: "GTA 6: Leaked Map & Secrets", rating: "4.8", reviews: "24k+", image: "https://i.imgur.com/50TipMQ.png", desc: "Exclusive Leak of Vice City Map & Cars." },
             { type: 'guide', title: "Elden Ring: Shadow Guide", rating: "5.0", reviews: "15k", image: "https://i.imgur.com/FMu1nLH.jpeg", desc: "Complete DLC Walkthrough & Maps." },
             { type: 'guide', title: "Minecraft: Modding Bible", rating: "4.7", reviews: "5k", image: "https://i.imgur.com/dQABsHy.png", desc: "How to Install Shaders on Mobile (PDF)." },
-            { type: 'guide', title: "Free Fire: Heroic Rank Guide", rating: "4.8", reviews: "80k", image: "https://i.imgur.com/k6ygVYm.jpeg", desc: "Top 5 Landing Spots & Strategies (PDF)." }
+            { type: 'guide', title: "Free Fire: Heroic Rank Guide", rating: "4.8", reviews: "40k", image: "https://i.imgur.com/k6ygVYm.jpeg", desc: "Top 5 Landing Spots & Strategies (PDF)." }
         ];
 
         let currentItemType = ''; 
@@ -621,3 +623,4 @@
     </script>
 </body>
 </html>
+
