--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@
         const appDatabase = [ 
             // --- GAMES (HIGH DEMAND) ---
             { type: 'game', title: "Monopoly GO!", rating: "4.9", reviews: "29k+", image: "https://i.imgur.com/j8sqcfc.png", desc: "Unlimited Dice Rolls & Sticker Packs." },
+            { type: 'game', title: "Crossfire: Legends", rating: "4.8", reviews: "19k+", image: "https://i.imgur.com/bGbdjCD.png", desc: "AimBot, Esp Support Android | Free Key Vip, Antiban." },
             { type: 'game', title: " Schedule I APK", rating: "4.8", reviews: "22k+", image: "https://i.imgur.com/QVfsyeX.jpeg", desc: "Unlimited Money & Coins Mod." },
             { type: 'game', title: " Clash Royale", rating: "4.8", reviews: "21k+", image: "https://i.imgur.com/F4He5Le.jpeg", desc: "Private Server, Unlimited Resources." },
             { type: 'game', title: "Brawl Stars", rating: "4.8", reviews: "15k", image: "https://i.imgur.com/GJKhvLp.png", desc: "Null's Private Server (Unlimited Gems)." },
@@ -623,5 +624,6 @@
     </script>
 </body>
 </html>
+
 
 
